@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-23-3
+DATE: 02/27/2024
+STAFF: lec
+wts2-1412/fl2-758/retire WF_GXD_secondary.rpt QC
+#       deleted:    weekly/WF_GXD_secondary.py
+
 TAG: qcreports_db-6-0-23-2
 DATE: 02/01/2024
 STAFF: lec
